--- a/Front-End/maritime-twin/package.json
+++ b/Front-End/maritime-twin/package.json
@@ -5,16 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server/index.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@types/maplibre-gl": "^1.13.2",
     "clsx": "^2.1.0",
+    "express": "^4.19.2",
     "lucide-react": "^0.344.0",
     "maplibre-gl": "^5.17.0",
     "react": "^18.2.0",
+    "react-markdown": "^9.1.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1"
   },
@@ -23,6 +28,7 @@
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
